# actix-realworld-example-app

./: .env.example  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .travis.yml  Cargo.toml  README.md
migrations/2018-10-21-063404_create_users/: down.sql  up.sql
migrations/2018-10-21-225724_create_index_on_users_email/: down.sql  up.sql
migrations/2018-10-24-131343_create_followers/: down.sql  up.sql
migrations/2018-10-25-232100_create_articles/: down.sql  up.sql
migrations/2018-10-27-051850_fix_articles_slug_unique_constraint/: down.sql  up.sql
migrations/2018-10-29-143038_create_comments/: up.sql
migrations/2018-10-31-135116_create_tags/: down.sql  up.sql
migrations/2019-03-06-144033_create_users/: up.sql
migrations/2019-03-06-144624_create_followers/: down.sql  up.sql
migrations/2019-03-06-145146_create_articles/: down.sql  up.sql
migrations/2019-03-06-152302_create_comments/: up.sql
migrations/2019-03-06-152831_create_article_tags/: down.sql  up.sql
src/: config.rs  error.rs  main.rs  prelude.rs  schema.rs
src/app/: mod.rs  profiles.rs  tags.rs  users.rs
src/app/articles/: comments.rs  mod.rs
src/db/: articles.rs  auth.rs  comments.rs  followers.rs  mod.rs  profiles.rs  tags.rs  users.rs
src/db/articles/: mod.rs
src/middleware/: mod.rs  token_service.rs
src/models/: article.rs  article_tag.rs  comment.rs  follower.rs  mod.rs  tag.rs  user.rs
src/utils/: auth.rs  custom_type.rs  hasher.rs  jwt.rs  mod.rs
