[package]
name = "conduit"
version = "0.1.0"
authors = ["grey <fairingrey@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7.9"
actix-web = "0.7.18"
chrono = "0.4.6"
diesel = { version = "1.4.1", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.13.0"
env_logger = "0.6.0"
failure = "0.1.5"
futures = "0.1.25"
jsonwebtoken = "5.0.1"
lazy_static = "1.3.0"
libreauth = "0.11.0"
log = "0.4.6"
rand = "0.6.5"
regex = "1.1.0"
serde = "1.0.89"
serde_derive = "1.0.89"
serde_json = "1.0.39"
slug = "0.1.4"
uuid = "0.7.2"
validator = "0.8.0"
validator_derive = "0.8.0"
