[package]
name = "conduit"
version = "0.1.0"
authors = ["grey <fairingrey@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-web = "1.0.7"
actix-cors = "0.1.0"
actix-service = "0.4.2"
actix-http = "0.2.10"
blob-uuid = "0.3.0"
chrono = "0.4.6"
diesel = { version = "1.4.2", features = ["chrono", "postgres", "r2d2", "uuidv07", "serde_json"] }
dotenv = "0.14.1"
env_logger = "0.6.1"
failure = "0.1.5"
futures = "0.1.25"
http = "0.1.16"
jsonwebtoken = "5.0.1"
lazy_static = "1.3.0"
libreauth = "0.11.0"
log = "0.4.6"
num_cpus = "1.10.0"
regex = "1.1.6"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
slug = "0.1.4"
uuid = { version = "0.7.4", features = ["serde", "v4"] }
validator = "0.8.0"
validator_derive = "0.8.0"
