[package]
name = "conduit"
version = "0.1.0"
authors = ["grey <fairingrey@gmail.com>", "thaddeus <inbox.733@gmail.com"]
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
actix-web = "4.1.2"
actix-cors = "0.6.4"
actix-service = "2.0.2"
actix-http = "3.2.2"
blob-uuid = "0.5.0"
chrono = "0.4.6"
diesel = { version = "2.0.2", features = ["chrono", "postgres", "r2d2", "uuid", "serde_json"] }
dotenv = "0.15.0"
env_logger = "0.9.3"
failure = "0.1.5"
futures = "0.3.25"
http = "0.2.8"
jsonwebtoken = "8.1.1"
lazy_static = "1.3.0"
libreauth = "0.15.0"
log = "0.4.6"
num_cpus = "1.10.0"
regex = "1.1.6"
serde = "1.0.91"
serde_derive = "1.0.91"
serde_json = "1.0.39"
slug = "0.1.4"
uuid = { version = "1.2", features = ["serde", "v4"] }
validator = { version = "0.16", features = ["derive"] }
